include $(top_srcdir)/config/common.am

EXTRA_DIST = \
	common.am \
	aspell.m4 \
	codeset.m4 \
	cygwin.m4 \
	gettext.m4 \
	glibc21.m4 \
	gnome--.m4 \
	gnome.m4 \
	gtk--.m4 \
	iconv.m4 \
	intmax.m4 \
	isc-posix.m4 \
	lcmessage.m4 \
	libtool.m4 \
	longdouble.m4 \
	longlong.m4 \
	lyxinclude25x.m4 \
	lyxinclude.m4 \
	nls.m4 \
	pkg.m4 \
	printf-posix.m4 \
	progtest.m4 \
	pspell.m4 \
	qt.m4 \
	signed.m4 \
	size_max.m4 \
	wchar_t.m4 \
	wint_t.m4 \
	xforms.m4 \
	xsize.m4
